tests/conc/reject/discard.ty
fn f(n: int) -> int:
    return n
fn main():
    spawn f(1)
    print("x")
